--- a/table.ejs
+++ b/table.ejs
@@ -15,6 +15,15 @@
         <% }) %>
 
         </thead>
+        <tbody>
+
+            <% row.forEach(rows => { %>
+
+                <td> <%= rows %> </td>
+    
+            <% }) %>
+
+        </tbody>
         
 
         
